--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(plotmag,default)
 S3method(plotmag,tts)
 S3method(plotmag,wpmf)
 export(cleandat)
+export(plotmag)
 export(surrog)
 export(warray)
 export(wmf)
