small changes to NAMESPACE and related

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,3 +10,8 @@ export(warray)
 export(wmf)
 export(wpmf)
 export(wt)
+importFrom(MASS,boxcox)
+importFrom(fields,image.plot)
+importFrom(graphics,image)
+importFrom(stats,lm)
+importFrom(stats,residuals)
