sorting out package dependencies

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,16 @@ export(wpmf)
 export(wt)
 importFrom(MASS,boxcox)
 importFrom(fields,image.plot)
+importFrom(grDevices,colorRampPalette)
+importFrom(grDevices,dev.off)
+importFrom(grDevices,pdf)
+importFrom(graphics,axis)
 importFrom(graphics,image)
+importFrom(graphics,par)
+importFrom(stats,fft)
 importFrom(stats,lm)
+importFrom(stats,qnorm)
+importFrom(stats,quantile)
 importFrom(stats,residuals)
+importFrom(stats,rnorm)
+importFrom(stats,runif)
