--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,8 @@ Imports:
     stats (>= 3.4.4),
     MASS (>= 7.3-50),
     fields (>= 9.6),
-    graphics (>= 3.4.4)
+    graphics (>= 3.4.4),
+    grDevices (>= 3.4.4)
 Suggests: testthat,
     vdiffr,
     knitr,
