finished coh and unit tests, except for fast case with powind normalization

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,9 @@ S3method(plotmag,default)
 S3method(plotmag,tts)
 S3method(plotmag,wpmf)
 export(cleandat)
+export(coh)
 export(plotmag)
 export(surrog)
-export(warray)
 export(wmf)
 export(wpmf)
 export(wt)
