started on plotphase and tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,16 +8,20 @@ S3method(plotmag,tts)
 S3method(plotmag,wmf)
 S3method(plotmag,wpmf)
 S3method(plotmag,wt)
+S3method(plotphase,coh)
+S3method(plotphase,default)
 S3method(plotrank,coh)
 S3method(plotrank,default)
 export(cleandat)
 export(coh)
+export(cohbandtest)
 export(plotmag)
+export(plotphase)
+export(plotrank)
 export(surrog)
 export(wmf)
 export(wpmf)
 export(wt)
-exportMethods("")
 importFrom(MASS,boxcox)
 importFrom(fields,image.plot)
 importFrom(grDevices,colorRampPalette)
