now export set and get methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,35 @@
 
 S3method(cohbandtest,coh)
 S3method(cohbandtest,default)
+S3method(get_bandp,coh)
+S3method(get_bandp,default)
+S3method(get_coher,coh)
+S3method(get_coher,default)
+S3method(get_dat,default)
+S3method(get_dat,wmf)
+S3method(get_dat,wpmf)
+S3method(get_dat,wt)
+S3method(get_dat1,coh)
+S3method(get_dat1,default)
+S3method(get_dat2,coh)
+S3method(get_dat2,default)
+S3method(get_norm,coh)
+S3method(get_norm,default)
+S3method(get_ranks,coh)
+S3method(get_ranks,default)
+S3method(get_sigmethod,coh)
+S3method(get_sigmethod,default)
+S3method(get_signif,coh)
+S3method(get_signif,default)
+S3method(get_signif,wpmf)
+S3method(get_times,coh)
+S3method(get_times,default)
+S3method(get_times,tts)
+S3method(get_timescales,coh)
+S3method(get_timescales,default)
+S3method(get_timescales,tts)
+S3method(get_values,default)
+S3method(get_values,tts)
 S3method(plotmag,coh)
 S3method(plotmag,default)
 S3method(plotmag,tts)
@@ -12,12 +41,74 @@ S3method(plotphase,coh)
 S3method(plotphase,default)
 S3method(plotrank,coh)
 S3method(plotrank,default)
+S3method(set_bandp,coh)
+S3method(set_bandp,default)
+S3method(set_coher,coh)
+S3method(set_coher,default)
+S3method(set_dat,default)
+S3method(set_dat,wmf)
+S3method(set_dat,wpmf)
+S3method(set_dat,wt)
+S3method(set_dat1,coh)
+S3method(set_dat1,default)
+S3method(set_dat2,coh)
+S3method(set_dat2,default)
+S3method(set_norm,coh)
+S3method(set_norm,default)
+S3method(set_ranks,coh)
+S3method(set_ranks,default)
+S3method(set_sigmethod,coh)
+S3method(set_sigmethod,default)
+S3method(set_signif,coh)
+S3method(set_signif,default)
+S3method(set_signif,wpmf)
+S3method(set_times,coh)
+S3method(set_times,default)
+S3method(set_times,tts)
+S3method(set_times,wmf)
+S3method(set_times,wpmf)
+S3method(set_times,wt)
+S3method(set_timescales,coh)
+S3method(set_timescales,default)
+S3method(set_timescales,tts)
+S3method(set_timescales,wmf)
+S3method(set_timescales,wpmf)
+S3method(set_timescales,wt)
+S3method(set_values,default)
+S3method(set_values,tts)
+S3method(set_values,wmf)
+S3method(set_values,wpmf)
+S3method(set_values,wt)
 export(cleandat)
 export(coh)
 export(cohbandtest)
+export(get_bandp)
+export(get_coher)
+export(get_dat)
+export(get_dat1)
+export(get_dat2)
+export(get_norm)
+export(get_ranks)
+export(get_sigmethod)
+export(get_signif)
+export(get_times)
+export(get_timescales)
+export(get_values)
 export(plotmag)
 export(plotphase)
 export(plotrank)
+export(set_bandp)
+export(set_coher)
+export(set_dat)
+export(set_dat1)
+export(set_dat2)
+export(set_norm)
+export(set_ranks)
+export(set_sigmethod)
+export(set_signif)
+export(set_times)
+export(set_timescales)
+export(set_values)
 export(surrog)
 export(wmf)
 export(wpmf)
