--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,13 @@ S3method(bandtest,coh)
 S3method(bandtest,default)
 S3method(get_bandp,coh)
 S3method(get_bandp,default)
+S3method(get_coefs,default)
+S3method(get_coefs,wlm)
 S3method(get_coher,coh)
 S3method(get_coher,default)
+S3method(get_coher,wlm)
 S3method(get_dat,default)
+S3method(get_dat,wlm)
 S3method(get_dat,wmf)
 S3method(get_dat,wpmf)
 S3method(get_dat,wt)
@@ -14,10 +18,21 @@ S3method(get_dat1,coh)
 S3method(get_dat1,default)
 S3method(get_dat2,coh)
 S3method(get_dat2,default)
+S3method(get_f0,default)
+S3method(get_f0,wlm)
+S3method(get_modval,default)
+S3method(get_modval,wlm)
 S3method(get_norm,coh)
 S3method(get_norm,default)
+S3method(get_norm,wlm)
 S3method(get_ranks,coh)
 S3method(get_ranks,default)
+S3method(get_scalemaxinput,default)
+S3method(get_scalemaxinput,wlm)
+S3method(get_scalemin,default)
+S3method(get_scalemin,wlm)
+S3method(get_sigma,default)
+S3method(get_sigma,wlm)
 S3method(get_sigmethod,coh)
 S3method(get_sigmethod,default)
 S3method(get_signif,coh)
@@ -26,11 +41,15 @@ S3method(get_signif,wpmf)
 S3method(get_times,coh)
 S3method(get_times,default)
 S3method(get_times,tts)
+S3method(get_times,wlm)
 S3method(get_timescales,coh)
 S3method(get_timescales,default)
 S3method(get_timescales,tts)
+S3method(get_timescales,wlm)
 S3method(get_values,default)
 S3method(get_values,tts)
+S3method(get_wts,default)
+S3method(get_wts,wlm)
 S3method(plotmag,coh)
 S3method(plotmag,default)
 S3method(plotmag,tts)
@@ -43,9 +62,13 @@ S3method(plotrank,coh)
 S3method(plotrank,default)
 S3method(set_bandp,coh)
 S3method(set_bandp,default)
+S3method(set_coefs,default)
+S3method(set_coefs,wlm)
 S3method(set_coher,coh)
 S3method(set_coher,default)
+S3method(set_coher,wlm)
 S3method(set_dat,default)
+S3method(set_dat,wlm)
 S3method(set_dat,wmf)
 S3method(set_dat,wpmf)
 S3method(set_dat,wt)
@@ -53,10 +76,21 @@ S3method(set_dat1,coh)
 S3method(set_dat1,default)
 S3method(set_dat2,coh)
 S3method(set_dat2,default)
+S3method(set_f0,default)
+S3method(set_f0,wlm)
+S3method(set_modval,default)
+S3method(set_modval,wlm)
 S3method(set_norm,coh)
 S3method(set_norm,default)
+S3method(set_norm,wlm)
 S3method(set_ranks,coh)
 S3method(set_ranks,default)
+S3method(set_scalemaxinput,default)
+S3method(set_scalemaxinput,wlm)
+S3method(set_scalemin,default)
+S3method(set_scalemin,wlm)
+S3method(set_sigma,default)
+S3method(set_sigma,wlm)
 S3method(set_sigmethod,coh)
 S3method(set_sigmethod,default)
 S3method(set_signif,coh)
@@ -65,12 +99,14 @@ S3method(set_signif,wpmf)
 S3method(set_times,coh)
 S3method(set_times,default)
 S3method(set_times,tts)
+S3method(set_times,wlm)
 S3method(set_times,wmf)
 S3method(set_times,wpmf)
 S3method(set_times,wt)
 S3method(set_timescales,coh)
 S3method(set_timescales,default)
 S3method(set_timescales,tts)
+S3method(set_timescales,wlm)
 S3method(set_timescales,wmf)
 S3method(set_timescales,wpmf)
 S3method(set_timescales,wt)
@@ -79,37 +115,55 @@ S3method(set_values,tts)
 S3method(set_values,wmf)
 S3method(set_values,wpmf)
 S3method(set_values,wt)
+S3method(set_wts,default)
+S3method(set_wts,wlm)
 export(bandtest)
 export(cleandat)
 export(coh)
 export(get_bandp)
+export(get_coefs)
 export(get_coher)
 export(get_dat)
 export(get_dat1)
 export(get_dat2)
+export(get_f0)
+export(get_modval)
 export(get_norm)
 export(get_ranks)
+export(get_scalemaxinput)
+export(get_scalemin)
+export(get_sigma)
 export(get_sigmethod)
 export(get_signif)
 export(get_times)
 export(get_timescales)
 export(get_values)
+export(get_wts)
 export(plotmag)
 export(plotphase)
 export(plotrank)
 export(set_bandp)
+export(set_coefs)
 export(set_coher)
 export(set_dat)
 export(set_dat1)
 export(set_dat2)
+export(set_f0)
+export(set_modval)
 export(set_norm)
 export(set_ranks)
+export(set_scalemaxinput)
+export(set_scalemin)
+export(set_sigma)
 export(set_sigmethod)
 export(set_signif)
 export(set_times)
 export(set_timescales)
 export(set_values)
+export(set_wts)
 export(surrog)
+export(wlm)
+export(wlmtest)
 export(wmf)
 export(wpmf)
 export(wt)
