added a wtopt slot to several classes containing wavelet transform params used

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,8 +18,6 @@ S3method(get_dat1,coh)
 S3method(get_dat1,default)
 S3method(get_dat2,coh)
 S3method(get_dat2,default)
-S3method(get_f0,default)
-S3method(get_f0,wlm)
 S3method(get_modval,default)
 S3method(get_modval,wlm)
 S3method(get_norm,coh)
@@ -27,12 +25,6 @@ S3method(get_norm,default)
 S3method(get_norm,wlm)
 S3method(get_ranks,coh)
 S3method(get_ranks,default)
-S3method(get_scalemaxinput,default)
-S3method(get_scalemaxinput,wlm)
-S3method(get_scalemin,default)
-S3method(get_scalemin,wlm)
-S3method(get_sigma,default)
-S3method(get_sigma,wlm)
 S3method(get_sigmethod,coh)
 S3method(get_sigmethod,default)
 S3method(get_signif,coh)
@@ -48,6 +40,8 @@ S3method(get_timescales,tts)
 S3method(get_timescales,wlm)
 S3method(get_values,default)
 S3method(get_values,tts)
+S3method(get_wtopt,default)
+S3method(get_wtopt,wlm)
 S3method(get_wts,default)
 S3method(get_wts,wlm)
 S3method(plotmag,coh)
@@ -76,8 +70,6 @@ S3method(set_dat1,coh)
 S3method(set_dat1,default)
 S3method(set_dat2,coh)
 S3method(set_dat2,default)
-S3method(set_f0,default)
-S3method(set_f0,wlm)
 S3method(set_modval,default)
 S3method(set_modval,wlm)
 S3method(set_norm,coh)
@@ -85,12 +77,6 @@ S3method(set_norm,default)
 S3method(set_norm,wlm)
 S3method(set_ranks,coh)
 S3method(set_ranks,default)
-S3method(set_scalemaxinput,default)
-S3method(set_scalemaxinput,wlm)
-S3method(set_scalemin,default)
-S3method(set_scalemin,wlm)
-S3method(set_sigma,default)
-S3method(set_sigma,wlm)
 S3method(set_sigmethod,coh)
 S3method(set_sigmethod,default)
 S3method(set_signif,coh)
@@ -115,6 +101,8 @@ S3method(set_values,tts)
 S3method(set_values,wmf)
 S3method(set_values,wpmf)
 S3method(set_values,wt)
+S3method(set_wtopt,default)
+S3method(set_wtopt,wlm)
 S3method(set_wts,default)
 S3method(set_wts,wlm)
 export(bandtest)
@@ -126,18 +114,15 @@ export(get_coher)
 export(get_dat)
 export(get_dat1)
 export(get_dat2)
-export(get_f0)
 export(get_modval)
 export(get_norm)
 export(get_ranks)
-export(get_scalemaxinput)
-export(get_scalemin)
-export(get_sigma)
 export(get_sigmethod)
 export(get_signif)
 export(get_times)
 export(get_timescales)
 export(get_values)
+export(get_wtopt)
 export(get_wts)
 export(plotmag)
 export(plotphase)
@@ -148,18 +133,15 @@ export(set_coher)
 export(set_dat)
 export(set_dat1)
 export(set_dat2)
-export(set_f0)
 export(set_modval)
 export(set_norm)
 export(set_ranks)
-export(set_scalemaxinput)
-export(set_scalemin)
-export(set_sigma)
 export(set_sigmethod)
 export(set_signif)
 export(set_times)
 export(set_timescales)
 export(set_values)
+export(set_wtopt)
 export(set_wts)
 export(surrog)
 export(wlm)
