wlmtest and related, also tweaks that happened at the same time

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,10 @@
 
 S3method(bandtest,coh)
 S3method(bandtest,default)
+S3method(bandtest,wlmtest)
 S3method(get_bandp,coh)
 S3method(get_bandp,default)
+S3method(get_bandp,wlmtest)
 S3method(get_coefs,default)
 S3method(get_coefs,wlm)
 S3method(get_coher,coh)
@@ -18,6 +20,8 @@ S3method(get_dat1,coh)
 S3method(get_dat1,default)
 S3method(get_dat2,coh)
 S3method(get_dat2,default)
+S3method(get_drop,default)
+S3method(get_drop,wlmtest)
 S3method(get_modval,default)
 S3method(get_modval,wlm)
 S3method(get_norm,coh)
@@ -25,10 +29,12 @@ S3method(get_norm,default)
 S3method(get_norm,wlm)
 S3method(get_ranks,coh)
 S3method(get_ranks,default)
+S3method(get_ranks,wlmtest)
 S3method(get_sigmethod,coh)
 S3method(get_sigmethod,default)
 S3method(get_signif,coh)
 S3method(get_signif,default)
+S3method(get_signif,wlmtest)
 S3method(get_signif,wpmf)
 S3method(get_times,coh)
 S3method(get_times,default)
@@ -40,8 +46,14 @@ S3method(get_timescales,tts)
 S3method(get_timescales,wlm)
 S3method(get_values,default)
 S3method(get_values,tts)
+S3method(get_wlmobj,default)
+S3method(get_wlmobj,wlmtest)
+S3method(get_wtopt,coh)
 S3method(get_wtopt,default)
 S3method(get_wtopt,wlm)
+S3method(get_wtopt,wmf)
+S3method(get_wtopt,wpmf)
+S3method(get_wtopt,wt)
 S3method(get_wts,default)
 S3method(get_wts,wlm)
 S3method(plotmag,coh)
@@ -56,6 +68,7 @@ S3method(plotrank,coh)
 S3method(plotrank,default)
 S3method(set_bandp,coh)
 S3method(set_bandp,default)
+S3method(set_bandp,wlmtest)
 S3method(set_coefs,default)
 S3method(set_coefs,wlm)
 S3method(set_coher,coh)
@@ -70,6 +83,8 @@ S3method(set_dat1,coh)
 S3method(set_dat1,default)
 S3method(set_dat2,coh)
 S3method(set_dat2,default)
+S3method(set_drop,default)
+S3method(set_drop,wlmtest)
 S3method(set_modval,default)
 S3method(set_modval,wlm)
 S3method(set_norm,coh)
@@ -77,10 +92,12 @@ S3method(set_norm,default)
 S3method(set_norm,wlm)
 S3method(set_ranks,coh)
 S3method(set_ranks,default)
+S3method(set_ranks,wlmtest)
 S3method(set_sigmethod,coh)
 S3method(set_sigmethod,default)
 S3method(set_signif,coh)
 S3method(set_signif,default)
+S3method(set_signif,wlmtest)
 S3method(set_signif,wpmf)
 S3method(set_times,coh)
 S3method(set_times,default)
@@ -101,8 +118,14 @@ S3method(set_values,tts)
 S3method(set_values,wmf)
 S3method(set_values,wpmf)
 S3method(set_values,wt)
+S3method(set_wlmobj,default)
+S3method(set_wlmobj,wlmtest)
+S3method(set_wtopt,coh)
 S3method(set_wtopt,default)
 S3method(set_wtopt,wlm)
+S3method(set_wtopt,wmf)
+S3method(set_wtopt,wpmf)
+S3method(set_wtopt,wt)
 S3method(set_wts,default)
 S3method(set_wts,wlm)
 export(bandtest)
@@ -114,6 +137,7 @@ export(get_coher)
 export(get_dat)
 export(get_dat1)
 export(get_dat2)
+export(get_drop)
 export(get_modval)
 export(get_norm)
 export(get_ranks)
@@ -122,6 +146,7 @@ export(get_signif)
 export(get_times)
 export(get_timescales)
 export(get_values)
+export(get_wlmobj)
 export(get_wtopt)
 export(get_wts)
 export(plotmag)
@@ -133,6 +158,7 @@ export(set_coher)
 export(set_dat)
 export(set_dat1)
 export(set_dat2)
+export(set_drop)
 export(set_modval)
 export(set_norm)
 export(set_ranks)
@@ -141,6 +167,7 @@ export(set_signif)
 export(set_times)
 export(set_timescales)
 export(set_values)
+export(set_wlmobj)
 export(set_wtopt)
 export(set_wts)
 export(surrog)
