--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ S3method(get_wts,wlm)
 S3method(plotmag,coh)
 S3method(plotmag,default)
 S3method(plotmag,tts)
+S3method(plotmag,wlmtest)
 S3method(plotmag,wmf)
 S3method(plotmag,wpmf)
 S3method(plotmag,wt)
