predicted synchrony and synchrony explained

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,6 +67,11 @@ S3method(plotphase,coh)
 S3method(plotphase,default)
 S3method(plotrank,coh)
 S3method(plotrank,default)
+S3method(plotrank,wlmtest)
+S3method(power,default)
+S3method(power,tts)
+S3method(predsync,default)
+S3method(predsync,wlm)
 S3method(set_bandp,coh)
 S3method(set_bandp,default)
 S3method(set_bandp,wlmtest)
@@ -129,6 +134,8 @@ S3method(set_wtopt,wpmf)
 S3method(set_wtopt,wt)
 S3method(set_wts,default)
 S3method(set_wts,wlm)
+S3method(syncexpl,default)
+S3method(syncexpl,wlm)
 export(bandtest)
 export(cleandat)
 export(coh)
@@ -153,6 +160,8 @@ export(get_wts)
 export(plotmag)
 export(plotphase)
 export(plotrank)
+export(power)
+export(predsync)
 export(set_bandp)
 export(set_coefs)
 export(set_coher)
@@ -172,6 +181,7 @@ export(set_wlmobj)
 export(set_wtopt)
 export(set_wts)
 export(surrog)
+export(syncexpl)
 export(wlm)
 export(wlmtest)
 export(wmf)
