edits to documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -138,6 +138,8 @@ S3method(syncexpl,default)
 S3method(syncexpl,wlm)
 export(bandtest)
 export(cleandat)
+export(cluseigen)
+export(clust)
 export(coh)
 export(get_bandp)
 export(get_coefs)
@@ -157,6 +159,8 @@ export(get_values)
 export(get_wlmobj)
 export(get_wtopt)
 export(get_wts)
+export(is.connected)
+export(modularity)
 export(plotmag)
 export(plotphase)
 export(plotrank)
@@ -182,6 +186,7 @@ export(set_wtopt)
 export(set_wts)
 export(surrog)
 export(syncexpl)
+export(synmat)
 export(wlm)
 export(wlmtest)
 export(wmf)
@@ -195,6 +200,8 @@ importFrom(grDevices,pdf)
 importFrom(graphics,axis)
 importFrom(graphics,image)
 importFrom(graphics,par)
+importFrom(stats,cor)
+importFrom(stats,cor.test)
 importFrom(stats,fft)
 importFrom(stats,lm)
 importFrom(stats,qnorm)
