docs and changes to issues.txt

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,14 +3,21 @@
 S3method(bandtest,coh)
 S3method(bandtest,default)
 S3method(bandtest,wlmtest)
+S3method(get_adj,clust)
+S3method(get_adj,default)
 S3method(get_bandp,coh)
 S3method(get_bandp,default)
 S3method(get_bandp,wlmtest)
+S3method(get_clusters,clust)
+S3method(get_clusters,default)
 S3method(get_coefs,default)
 S3method(get_coefs,wlm)
 S3method(get_coher,coh)
 S3method(get_coher,default)
 S3method(get_coher,wlm)
+S3method(get_coords,clust)
+S3method(get_coords,default)
+S3method(get_dat,clust)
 S3method(get_dat,default)
 S3method(get_dat,wlm)
 S3method(get_dat,wmf)
@@ -22,6 +29,12 @@ S3method(get_dat2,coh)
 S3method(get_dat2,default)
 S3method(get_drop,default)
 S3method(get_drop,wlmtest)
+S3method(get_methodspec,clust)
+S3method(get_methodspec,default)
+S3method(get_mns,clust)
+S3method(get_mns,default)
+S3method(get_modres,clust)
+S3method(get_modres,default)
 S3method(get_modval,default)
 S3method(get_modval,wlm)
 S3method(get_norm,coh)
@@ -36,6 +49,7 @@ S3method(get_signif,coh)
 S3method(get_signif,default)
 S3method(get_signif,wlmtest)
 S3method(get_signif,wpmf)
+S3method(get_times,clust)
 S3method(get_times,coh)
 S3method(get_times,default)
 S3method(get_times,tts)
@@ -48,6 +62,10 @@ S3method(get_values,default)
 S3method(get_values,tts)
 S3method(get_wlmobj,default)
 S3method(get_wlmobj,wlmtest)
+S3method(get_wmfs,clust)
+S3method(get_wmfs,default)
+S3method(get_wpmfs,clust)
+S3method(get_wpmfs,default)
 S3method(get_wtopt,coh)
 S3method(get_wtopt,default)
 S3method(get_wtopt,wlm)
@@ -72,14 +90,21 @@ S3method(power,default)
 S3method(power,tts)
 S3method(predsync,default)
 S3method(predsync,wlm)
+S3method(set_adj,clust)
+S3method(set_adj,default)
 S3method(set_bandp,coh)
 S3method(set_bandp,default)
 S3method(set_bandp,wlmtest)
+S3method(set_clusters,clust)
+S3method(set_clusters,default)
 S3method(set_coefs,default)
 S3method(set_coefs,wlm)
 S3method(set_coher,coh)
 S3method(set_coher,default)
 S3method(set_coher,wlm)
+S3method(set_coords,clust)
+S3method(set_coords,default)
+S3method(set_dat,clust)
 S3method(set_dat,default)
 S3method(set_dat,wlm)
 S3method(set_dat,wmf)
@@ -91,6 +116,12 @@ S3method(set_dat2,coh)
 S3method(set_dat2,default)
 S3method(set_drop,default)
 S3method(set_drop,wlmtest)
+S3method(set_methodspecs,clust)
+S3method(set_methodspecs,default)
+S3method(set_mns,clust)
+S3method(set_mns,default)
+S3method(set_modres,clust)
+S3method(set_modres,default)
 S3method(set_modval,default)
 S3method(set_modval,wlm)
 S3method(set_norm,coh)
@@ -105,6 +136,7 @@ S3method(set_signif,coh)
 S3method(set_signif,default)
 S3method(set_signif,wlmtest)
 S3method(set_signif,wpmf)
+S3method(set_times,clust)
 S3method(set_times,coh)
 S3method(set_times,default)
 S3method(set_times,tts)
@@ -126,6 +158,10 @@ S3method(set_values,wpmf)
 S3method(set_values,wt)
 S3method(set_wlmobj,default)
 S3method(set_wlmobj,wlmtest)
+S3method(set_wmfs,clust)
+S3method(set_wmfs,default)
+S3method(set_wpmfs,clust)
+S3method(set_wpmfs,default)
 S3method(set_wtopt,coh)
 S3method(set_wtopt,default)
 S3method(set_wtopt,wlm)
@@ -141,13 +177,19 @@ export(cleandat)
 export(cluseigen)
 export(clust)
 export(coh)
+export(get_adj)
 export(get_bandp)
+export(get_clusters)
 export(get_coefs)
 export(get_coher)
+export(get_coords)
 export(get_dat)
 export(get_dat1)
 export(get_dat2)
 export(get_drop)
+export(get_methodspec)
+export(get_mns)
+export(get_modres)
 export(get_modval)
 export(get_norm)
 export(get_ranks)
@@ -157,6 +199,8 @@ export(get_times)
 export(get_timescales)
 export(get_values)
 export(get_wlmobj)
+export(get_wmfs)
+export(get_wpmfs)
 export(get_wtopt)
 export(get_wts)
 export(is.connected)
@@ -166,13 +210,19 @@ export(plotphase)
 export(plotrank)
 export(power)
 export(predsync)
+export(set_adj)
 export(set_bandp)
+export(set_clusters)
 export(set_coefs)
 export(set_coher)
+export(set_coords)
 export(set_dat)
 export(set_dat1)
 export(set_dat2)
 export(set_drop)
+export(set_methodspecs)
+export(set_mns)
+export(set_modres)
 export(set_modval)
 export(set_norm)
 export(set_ranks)
@@ -182,6 +232,8 @@ export(set_times)
 export(set_timescales)
 export(set_values)
 export(set_wlmobj)
+export(set_wmfs)
+export(set_wpmfs)
 export(set_wtopt)
 export(set_wts)
 export(surrog)
