--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,6 +22,7 @@ Imports:
 Suggests: testthat,
     vdiffr,
     knitr,
-    rmarkdown
+    rmarkdown,
+    mvtnorm
 VignetteBuilder: knitr
 RoxygenNote: 6.0.1
