--- a/NAMESPACE
+++ b/NAMESPACE
@@ -86,6 +86,8 @@ S3method(plotphase,default)
 S3method(plotrank,coh)
 S3method(plotrank,default)
 S3method(plotrank,wlmtest)
+S3method(plotwpmfs,clust)
+S3method(plotwpmfs,default)
 S3method(power,default)
 S3method(power,tts)
 S3method(predsync,default)
@@ -208,6 +210,7 @@ export(modularity)
 export(plotmag)
 export(plotphase)
 export(plotrank)
+export(plotwpmfs)
 export(power)
 export(predsync)
 export(set_adj)
