edits to addwmfs addwpmfs, also to clust, also to vignette and namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -172,6 +172,8 @@ S3method(set_wts,default)
 S3method(set_wts,wlm)
 S3method(syncexpl,default)
 S3method(syncexpl,wlm)
+export(addwmfs)
+export(addwpmfs)
 export(bandtest)
 export(cleandat)
 export(cluseigen)
