added print methods for various classes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -212,6 +212,14 @@ export(plotphase)
 export(plotrank)
 export(power)
 export(predsync)
+export(print.clust)
+export(print.coh)
+export(print.tts)
+export(print.wlm)
+export(print.wlmtest)
+export(print.wmf)
+export(print.wpmf)
+export(print.wt)
 export(set_adj)
 export(set_bandp)
 export(set_clusters)
