--- a/NAMESPACE
+++ b/NAMESPACE
@@ -214,6 +214,7 @@ export(power)
 export(predsync)
 export(print.clust)
 export(print.coh)
+export(print.summary_wsyn)
 export(print.tts)
 export(print.wlm)
 export(print.wlmtest)
@@ -246,6 +247,14 @@ export(set_wmfs)
 export(set_wpmfs)
 export(set_wtopt)
 export(set_wts)
+export(summary.clust)
+export(summary.coh)
+export(summary.tts)
+export(summary.wlm)
+export(summary.wlmtest)
+export(summary.wmf)
+export(summary.wpmf)
+export(summary.wt)
 export(surrog)
 export(syncexpl)
 export(synmat)
