--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,14 +54,17 @@ S3method(get_times,coh)
 S3method(get_times,default)
 S3method(get_times,tts)
 S3method(get_times,wlm)
+S3method(get_times,wmf)
 S3method(get_times,wt)
 S3method(get_timescales,coh)
 S3method(get_timescales,default)
 S3method(get_timescales,tts)
 S3method(get_timescales,wlm)
+S3method(get_timescales,wmf)
 S3method(get_timescales,wt)
 S3method(get_values,default)
 S3method(get_values,tts)
+S3method(get_values,wmf)
 S3method(get_values,wt)
 S3method(get_wlmobj,default)
 S3method(get_wlmobj,wlmtest)
@@ -93,15 +96,6 @@ S3method(power,default)
 S3method(power,tts)
 S3method(predsync,default)
 S3method(predsync,wlm)
-S3method(print,clust)
-S3method(print,coh)
-S3method(print,summary_wsyn)
-S3method(print,tts)
-S3method(print,wlm)
-S3method(print,wlmtest)
-S3method(print,wmf)
-S3method(print,wpmf)
-S3method(print,wt)
 S3method(set_adj,clust)
 S3method(set_adj,default)
 S3method(set_bandp,coh)
@@ -182,14 +176,6 @@ S3method(set_wtopt,wpmf)
 S3method(set_wtopt,wt)
 S3method(set_wts,default)
 S3method(set_wts,wlm)
-S3method(summary,clust)
-S3method(summary,coh)
-S3method(summary,tts)
-S3method(summary,wlm)
-S3method(summary,wlmtest)
-S3method(summary,wmf)
-S3method(summary,wpmf)
-S3method(summary,wt)
 S3method(syncexpl,default)
 S3method(syncexpl,wlm)
 export(addwmfs)
@@ -232,6 +218,15 @@ export(plotphase)
 export(plotrank)
 export(power)
 export(predsync)
+export(print.clust)
+export(print.coh)
+export(print.summary_wsyn)
+export(print.tts)
+export(print.wlm)
+export(print.wlmtest)
+export(print.wmf)
+export(print.wpmf)
+export(print.wt)
 export(set_adj)
 export(set_bandp)
 export(set_clusters)
@@ -258,6 +253,14 @@ export(set_wmfs)
 export(set_wpmfs)
 export(set_wtopt)
 export(set_wts)
+export(summary.clust)
+export(summary.coh)
+export(summary.tts)
+export(summary.wlm)
+export(summary.wlmtest)
+export(summary.wmf)
+export(summary.wpmf)
+export(summary.wt)
 export(surrog)
 export(syncexpl)
 export(synmat)
