improved docs of wpmf methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,16 +55,19 @@ S3method(get_times,default)
 S3method(get_times,tts)
 S3method(get_times,wlm)
 S3method(get_times,wmf)
+S3method(get_times,wpmf)
 S3method(get_times,wt)
 S3method(get_timescales,coh)
 S3method(get_timescales,default)
 S3method(get_timescales,tts)
 S3method(get_timescales,wlm)
 S3method(get_timescales,wmf)
+S3method(get_timescales,wpmf)
 S3method(get_timescales,wt)
 S3method(get_values,default)
 S3method(get_values,tts)
 S3method(get_values,wmf)
+S3method(get_values,wpmf)
 S3method(get_values,wt)
 S3method(get_wlmobj,default)
 S3method(get_wlmobj,wlmtest)
