--- a/NAMESPACE
+++ b/NAMESPACE
@@ -99,6 +99,15 @@ S3method(power,default)
 S3method(power,tts)
 S3method(predsync,default)
 S3method(predsync,wlm)
+S3method(print,clust)
+S3method(print,coh)
+S3method(print,summary_wsyn)
+S3method(print,tts)
+S3method(print,wlm)
+S3method(print,wlmtest)
+S3method(print,wmf)
+S3method(print,wpmf)
+S3method(print,wt)
 S3method(set_adj,clust)
 S3method(set_adj,default)
 S3method(set_bandp,coh)
@@ -179,6 +188,14 @@ S3method(set_wtopt,wpmf)
 S3method(set_wtopt,wt)
 S3method(set_wts,default)
 S3method(set_wts,wlm)
+S3method(summary,clust)
+S3method(summary,coh)
+S3method(summary,tts)
+S3method(summary,wlm)
+S3method(summary,wlmtest)
+S3method(summary,wmf)
+S3method(summary,wpmf)
+S3method(summary,wt)
 S3method(syncexpl,default)
 S3method(syncexpl,wlm)
 export(addwmfs)
@@ -221,15 +238,6 @@ export(plotphase)
 export(plotrank)
 export(power)
 export(predsync)
-export(print.clust)
-export(print.coh)
-export(print.summary_wsyn)
-export(print.tts)
-export(print.wlm)
-export(print.wlmtest)
-export(print.wmf)
-export(print.wpmf)
-export(print.wt)
 export(set_adj)
 export(set_bandp)
 export(set_clusters)
@@ -256,14 +264,6 @@ export(set_wmfs)
 export(set_wpmfs)
 export(set_wtopt)
 export(set_wts)
-export(summary.clust)
-export(summary.coh)
-export(summary.tts)
-export(summary.wlm)
-export(summary.wlmtest)
-export(summary.wmf)
-export(summary.wpmf)
-export(summary.wt)
 export(surrog)
 export(syncexpl)
 export(synmat)
