--- a/NAMESPACE
+++ b/NAMESPACE
@@ -92,6 +92,7 @@ S3method(plotmag,wpmf)
 S3method(plotmag,wt)
 S3method(plotphase,coh)
 S3method(plotphase,default)
+S3method(plotphase,tts)
 S3method(plotrank,coh)
 S3method(plotrank,default)
 S3method(plotrank,wlmtest)
