changes associated with proofing and updating the vignette

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -93,6 +93,9 @@ S3method(plotmag,wt)
 S3method(plotphase,coh)
 S3method(plotphase,default)
 S3method(plotphase,tts)
+S3method(plotphase,wmf)
+S3method(plotphase,wpmf)
+S3method(plotphase,wt)
 S3method(plotrank,coh)
 S3method(plotrank,default)
 S3method(plotrank,wlmtest)
