plotmap works, checks pass

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -238,6 +238,7 @@ export(get_wts)
 export(is.connected)
 export(modularity)
 export(plotmag)
+export(plotmap)
 export(plotphase)
 export(plotrank)
 export(power)
@@ -284,6 +285,7 @@ importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
 importFrom(graphics,axis)
 importFrom(graphics,image)
+importFrom(graphics,legend)
 importFrom(graphics,lines)
 importFrom(graphics,par)
 importFrom(graphics,plot)
