--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,23 +6,24 @@ Authors@R: c(
     person("Daniel C.", "Reuman", email = "reuman@ku.edu", role = c("aut", "cre", "cph")),
     person("Thomas L.", "Anderson", email="anderstl@gmail.com", role=c("aut")),
     person("Jonathan", "Walter", email = "jaw3es@virginia.edu", role=c("aut")),
-    person("Lei", "Zhao", email = "leizhao@ku.edu", role=c("aut")),
+    person("Lei", "Zhao", email = "lei.zhao@cau.edu.cn", role=c("aut")),
     person("Lawrence W.", "Sheppard", email="lwsheppard@ku.edu", role=c("aut"))
     )
-Description: This package contains tools for a wavelet-based approach to analyzing spatial synchrony, principally in ecological data.
+Description: Tools for a wavelet-based approach to analyzing spatial synchrony, principally in ecological data. Some tools will be useful for studying community synchrony.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
 Imports:
-    stats (>= 3.4.4),
-    MASS (>= 7.3-47),
     fields (>= 9.6),
     graphics (>= 3.4.4),
     grDevices (>= 3.4.4),
+    MASS (>= 7.3-47),
+    mvtnorm (>= 1.0.0),
+    stats (>= 3.4.4),
     vdiffr (>= 0.2.3)
-Suggests: testthat,
+Suggests: 
     knitr,
     rmarkdown,
-    mvtnorm
+    testthat
 VignetteBuilder: knitr
 RoxygenNote: 6.0.1
