--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,7 @@ Imports:
     graphics (>= 3.4.4),
     grDevices (>= 3.4.4),
     MASS (>= 7.3-47),
-    stats (>= 3.4.4),
+    stats (>= 3.4.4)
 Suggests: 
     knitr,
     mvtnorm,
