changes required by R due to a recent change in the conditional use of functions from packages in Suggests

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,5 +25,8 @@ Suggests:
     rmarkdown,
     testthat,
     vdiffr
-VignetteBuilder: knitr
-RoxygenNote: 6.0.1
+VignetteBuilder: 
+    knitr,
+    rmarkdown,
+    mvtnorm
+RoxygenNote: 7.1.0
